components/go-analysis/fixtures/bad/vet/go.mod
module example.com/standards/bad/vet

go 1.23
